After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 746585 - pluginloader: Fix typos
pluginloader: Fix typos
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
unspecified
Other All
: Normal normal
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-03-21 20:48 UTC by Michael Catanzaro
Modified: 2015-03-25 23:44 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
pluginloader: Fix typos (1.12 KB, patch)
2015-03-21 20:48 UTC, Michael Catanzaro
committed Details | Review
docs: Fix typos (1.27 KB, patch)
2015-03-21 22:13 UTC, Michael Catanzaro
committed Details | Review

Description Michael Catanzaro 2015-03-21 20:48:48 UTC
Typos
Comment 1 Michael Catanzaro 2015-03-21 20:48:51 UTC
Created attachment 300040 [details] [review]
pluginloader: Fix typos
Comment 2 Michael Catanzaro 2015-03-21 22:13:50 UTC
Created attachment 300050 [details] [review]
docs: Fix typos

Lo! More!
Comment 3 Tim-Philipp Müller 2015-03-25 23:43:14 UTC
Thanks, pushed:

commit 5b6ab53e7f48142e9a403927942914ff0ea20ac9
Author: Michael Catanzaro <mcatanzaro@gnome.org>
Date:   Sat Mar 21 17:13:18 2015 -0500

    docs: Fix typos
    
    https://bugzilla.gnome.org/show_bug.cgi?id=746585

commit f7189624674b0b282ae22086e7c5a467426cd27b
Author: Michael Catanzaro <mcatanzaro@gnome.org>
Date:   Sat Mar 21 15:46:50 2015 -0500

    pluginloader: Fix typos
    
    https://bugzilla.gnome.org/show_bug.cgi?id=746585