pluginloader: Fix typos

https://bugzilla.gnome.org/show_bug.cgi?id=746585